--- a/index.html
+++ b/index.html
@@ -1,59 +1,76 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>RFID Budget Tracker</title>
+    <title>Student Budget Tracker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
-<div class="container mt-5">
-    <div class="card shadow">
-        <div class="card-header bg-dark text-white text-center">
-            <h3>RFID Student Budget System</h3>
-        </div>
+<div class="container mt-3">
 
-        <div class="card-body text-center">
-            <h5>Last Scanned RFID UID:</h5>
-            <h3 id="uidDisplay" class="text-success">Waiting...</h3>
-
-            <button class="btn btn-primary mt-3" onclick="simulateScan()">Simulate RFID Scan</button>
-
-            <hr>
-
-            <h5>Student: <span id="studentName">-</span></h5>
-            <h5>Balance: ₱<span id="studentBalance">0</span></h5>
-
-            <hr>
-
-            <h5>Purchase Amount</h5>
-            <input type="number" id="purchaseAmount" class="form-control w-50 mx-auto" placeholder="Enter amount">
-
-            <button class="btn btn-danger mt-3" onclick="deductAmount()">Deduct</button>
+    <!-- Header -->
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h3>App Name / Logo</h3>
+        <div>
+            <button class="btn btn-secondary me-2">Dashboard</button>
+            <button class="btn btn-secondary me-2">Profile</button>
+            <button class="btn btn-danger">Logout</button>
         </div>
     </div>
 
-    <div class="card shadow mt-4">
-        <div class="card-header bg-primary text-white">
-            Transaction Logs
+    <!-- Summary Cards -->
+    <div class="row text-center mb-3">
+        <div class="col-md-4">
+            <div class="card p-3">
+                <h5>Total Budget</h5>
+                <h3 id="totalBudget">₱0</h3>
+            </div>
         </div>
-        <div class="card-body">
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th>Student</th>
-                        <th>Amount</th>
-                        <th>Remaining Balance</th>
-                        <th>Time</th>
-                    </tr>
-                </thead>
-                <tbody id="logTable"></tbody>
-            </table>
+        <div class="col-md-4">
+            <div class="card p-3">
+                <h5>Total Expenses</h5>
+                <h3 id="totalExpenses">₱0</h3>
+            </div>
         </div>
+        <div class="col-md-4">
+            <div class="card p-3">
+                <h5>Remaining Balance</h5>
+                <h3 id="remainingBalance">₱0</h3>
+            </div>
+        </div>
+    </div>
+
+    <!-- Main Dashboard -->
+    <div class="row mb-3">
+        <div class="col-md-8">
+            <div class="card p-3">
+                <h5>Expense Summary Chart</h5>
+                <canvas id="expenseChart" height="200"></canvas>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card p-3">
+                <h5>Expense List</h5>
+                <ul id="expenseList" class="list-group mt-2">
+                    <!-- Example categories -->
+                    <li class="list-group-item">Food</li>
+                    <li class="list-group-item">Transport</li>
+                    <li class="list-group-item">School Supplies</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!-- Add Expense & Set Budget -->
+    <div class="d-flex justify-content-center gap-3 mb-5">
+        <button class="btn btn-success" id="addExpenseBtn">Add Expense</button>
+        <button class="btn btn-primary" id="setBudgetBtn">Set Budget</button>
     </div>
 </div>
 
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="script.js"></script>
 </body>
 </html>
