--- a/index.html
+++ b/index.html
@@ -2,75 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Student Budget Tracker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Student Budget Tracker</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body class="bg-light">
+<body>
+    <div class="container">
+        <header>
+            <h1>Budget Tracker</h1>
+            <div class="balance-container">
+                <h2>Total Balance: <span id="total-balance">₱0.00</span></h2>
+            </div>
+        </header>
 
-<div class="container mt-3">
+        <main>
+            <section class="input-section">
+                <h3>Add New Transaction</h3>
+                <form id="transaction-form">
+                    <input type="text" id="description" placeholder="Description" required>
+                    <input type="number" id="amount" placeholder="Amount" required>
+                    <select id="category">
+                        <option value="Food">Food</option>
+                        <option value="Transport">Transport</option>
+                        <option value="Education">Education</option>
+                        <option value="Entertainment">Entertainment</option>
+                        <option value="Utilities">Utilities</option>
+                        <option value="Other">Other</option>
+                    </select>
+                    <button type="submit">Add Transaction</button>
+                </form>
+            </section>
 
-    <!-- Header -->
-    <div class="d-flex justify-content-between align-items-center mb-3">
-        <h3>App Name / Logo</h3>
-        <div>
-            <button class="btn btn-secondary me-2">Dashboard</button>
-            <button class="btn btn-secondary me-2">Profile</button>
-            <button class="btn btn-danger">Logout</button>
-        </div>
+            <section class="display-section">
+                <div class="history-container">
+                    <h3>Transaction History</h3>
+                    <ul id="transaction-list"></ul>
+                </div>
+                
+                <div class="chart-section">
+                    <h3>Expense Summary</h3>
+                    <div class="chart-container">
+                        <canvas id="expenseChart"></canvas>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
-
-    <!-- Summary Cards -->
-    <div class="row text-center mb-3">
-        <div class="col-md-4">
-            <div class="card p-3">
-                <h5>Total Budget</h5>
-                <h3 id="totalBudget">₱0</h3>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card p-3">
-                <h5>Total Expenses</h5>
-                <h3 id="totalExpenses">₱0</h3>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card p-3">
-                <h5>Remaining Balance</h5>
-                <h3 id="remainingBalance">₱0</h3>
-            </div>
-        </div>
-    </div>
-
-    <!-- Main Dashboard -->
-    <div class="row mb-3">
-        <div class="col-md-8">
-            <div class="card p-3">
-                <h5>Expense Summary Chart</h5>
-                <canvas id="expenseChart" height="200"></canvas>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card p-3">
-                <h5>Expense List</h5>
-                <ul id="expenseList" class="list-group mt-2">
-                    <!-- Example categories -->
-                    <li class="list-group-item">Food</li>
-                    <li class="list-group-item">Transport</li>
-                    <li class="list-group-item">School Supplies</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <!-- Add Expense & Set Budget -->
-    <div class="d-flex justify-content-center gap-3 mb-5">
-        <button class="btn btn-success" id="addExpenseBtn">Add Expense</button>
-        <button class="btn btn-primary" id="setBudgetBtn">Set Budget</button>
-    </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
