--- a/index.html
+++ b/index.html
@@ -8,47 +8,40 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Budget Tracker</h1>
-            <div class="balance-container">
-                <h2>Total Balance: <span id="total-balance">₱0.00</span></h2>
-            </div>
-        </header>
+    <nav>
+        <div class="nav-left">App Name / Logo</div>
+        <div class="nav-center">Dashboard</div>
+        <div class="nav-right">
+            <button>Profile</button>
+            <button>Logout</button>
+        </div>
+    </nav>
 
-        <main>
-            <section class="input-section">
-                <h3>Add New Transaction</h3>
-                <form id="transaction-form">
-                    <input type="text" id="description" placeholder="Description" required>
-                    <input type="number" id="amount" placeholder="Amount" required>
-                    <select id="category">
-                        <option value="Food">Food</option>
-                        <option value="Transport">Transport</option>
-                        <option value="Education">Education</option>
-                        <option value="Entertainment">Entertainment</option>
-                        <option value="Utilities">Utilities</option>
-                        <option value="Other">Other</option>
-                    </select>
-                    <button type="submit">Add Transaction</button>
-                </form>
-            </section>
-
-            <section class="display-section">
-                <div class="history-container">
-                    <h3>Transaction History</h3>
-                    <ul id="transaction-list"></ul>
-                </div>
-                
-                <div class="chart-section">
-                    <h3>Expense Summary</h3>
-                    <div class="chart-container">
-                        <canvas id="expenseChart"></canvas>
-                    </div>
-                </div>
-            </section>
-        </main>
+    <div class="summary-cards">
+        <div class="card">Total Budget</div>
+        <div class="card">Total Expenses</div>
+        <div class="card">Remaining Balance</div>
     </div>
+
+    <div class="main-content">
+        <div class="chart-box">
+            <canvas id="expenseChart" height="400"></canvas>
+        </div>
+        <div class="list-box">
+            <h3>Expense List</h3>
+            <ul id="expense-list">
+                <li>Food</li>
+                <li>Transport</li>
+                <li>School Supplies</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="actions">
+        <button id="add-expense">Add Expense</button>
+        <button id="set-budget">Set Budget</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
