--- a/index.html
+++ b/index.html
@@ -1,58 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student Budget Tracker</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-    <nav>
-        <div class="nav-left"><strong>StudentBudget</strong></div>
-        <div class="nav-center">Dashboard</div>
-        <div class="nav-right">
-            <button class="nav-btn" onclick="alert('Profile coming soon!')">Profile</button>
-            <button class="nav-btn logout" onclick="location.reload()">Logout</button>
-        </div>
-    </nav>
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <title>Student Budget Tracker</title> 
+    <link rel="stylesheet" href="style.css"> 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> 
+</head> 
+<body> 
+    <nav> 
+        <div class="nav-left"><strong>StudentBudget</strong></div> 
+        <div class="nav-center">Dashboard</div> 
+        <div class="nav-right"> 
+            <button id="profile-trigger" class="nav-btn">Profile</button> 
+            <button class="nav-btn logout" onclick="location.reload()">Logout</button> 
+        </div> 
+    </nav> 
 
-    <div class="summary-cards">
-        <div class="card">
-            <small>Total Budget</small>
-            <h2 id="display-budget">₱0.00</h2>
-        </div>
-        <div class="card">
-            <small>Total Expenses</small>
-            <h2 id="display-expenses">₱0.00</h2>
-        </div>
-        <div class="card">
-            <small>Remaining Balance</small>
-            <h2 id="display-balance">₱0.00</h2>
-        </div>
-    </div>
+    <div class="summary-cards"> 
+        <div class="card"> 
+            <small>Total Budget</small> 
+            <h2 id="display-budget">₱0.00</h2> 
+        </div> 
+        <div class="card"> 
+            <small>Total Expenses</small> 
+            <h2 id="display-expenses">₱0.00</h2> 
+        </div> 
+        <div class="card"> 
+            <small>Remaining Balance</small> 
+            <h2 id="display-balance">₱0.00</h2> 
+        </div> 
+    </div> 
 
-    <div class="main-content">
-        <div class="chart-box">
-            <h3>Expense Summary</h3>
-            <div class="chart-container">
-                <canvas id="expenseChart"></canvas>
-            </div>
-        </div>
-        <div class="list-box">
-            <h3>Expense List</h3>
-            <ul id="expense-list">
-                </ul>
-        </div>
-    </div>
+    <div class="main-content"> 
+        <div class="chart-box"> 
+            <h3>Expense Summary</h3> 
+            <div class="chart-container"> 
+                <canvas id="expenseChart"></canvas> 
+            </div> 
+        </div> 
+        <div class="list-box"> 
+            <h3>Expense List</h3> 
+            <ul id="expense-list"></ul> 
+        </div> 
+    </div> 
 
-    <div class="actions">
-        <button id="add-expense-btn" class="action-btn main">Add Expense</button>
-        <button id="set-budget-btn" class="action-btn secondary">Set Budget</button>
-    </div>
+    <div class="actions"> 
+        <button id="add-expense-btn" class="action-btn main">Add Expense</button> 
+        <button id="set-budget-btn" class="action-btn secondary">Set Budget</button> 
+        </div> 
 
-    <div id="rfid-status" class="rfid-toast">Waiting for RFID Scan... (Press 'Enter' to Simulate)</div>
+    <div id="rfid-status" class="rfid-toast">Waiting for RFID Scan... (Press 'Enter' to Simulate)</div> 
 
-    <script src="script.js"></script>
-</body>
+    <script src="script.js"></script> 
+</body> 
 </html>
